tests/ui/pattern/issue-92074-macro-ice.stderr
error: expected pattern, found expression `Vec :: new()`
  --> $DIR/issue-92074-macro-ice.rs:10:20
   |
LL |     ($e:expr) => { $e }
   |                    ^^ expected pattern
...
LL |     () => { force_expr!(Vec::new()) }
   |             ----------------------- this macro call doesn't expand to a pattern
...
LL |     assert!(matches!(x, En::A(make_vec!())));
   |                               ----------- in this macro invocation
   |
   = note: this error originates in the macro `force_expr` which comes from the expansion of the macro `make_vec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected pattern, found expression `get_usize()`
  --> $DIR/issue-92074-macro-ice.rs:14:29
   |
LL |     ($a:expr, $b:expr) => { $a..=$b }
   |                             ^^ expected pattern
...
LL |     () => { force_pat!(get_usize(), get_usize()) }
   |             ------------------------------------ this macro call doesn't expand to a pattern
...
LL |     assert!(matches!(5, make_pat!()));
   |                         ----------- in this macro invocation
   |
   = note: this error originates in the macro `force_pat` which comes from the expansion of the macro `make_pat` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

